Add bootup logo and rework oled display code

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ board_build.partitions = huge_app.csv
 lib_deps = 
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.1
 	mikalhart/TinyGPSPlus@^1.0.3
+	plerup/EspSoftwareSerial@^6.15.2
