Add a web server running on 192.168.1.1

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 board_build.partitions = huge_app.csv
 lib_deps = 
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.1
-	mikalhart/TinyGPSPlus@^1.0.3
 	plerup/EspSoftwareSerial@^6.15.2
+	tinyu-zhao/TinyGPSPlus-ESP32@^0.0.2
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+board_build.flash_mode = dio
